app/assets/stylesheets/components/wraper.scss
.callout {
  padding: 20px;
  margin: 20px 0;
  border: 1px solid !important;
  border-left-width: 5px !important;
  border-radius: 3px;
  border-left-color: $primary !important;

  h4 {
    color: #1b809e;
    margin-top: 0;
    margin-bottom: 5px;
  }

  p:last-child {
    margin-bottom: 0;
  }

  &.callout-info{
    border-left-color: $info !important;
  }
  &.callout-danger{
    border-left-color: $danger !important;
  }
  &.callout-warning{
    border-left-color: $warning !important;
  }
}

.page-section {
  position: relative;
  border-color: #e5e5e5 #eee #eee;
  border-style: solid;
  border-width: 1px 0;
  -webkit-box-shadow: inset 0 3px 6px rgba(0,0,0,.05);
  box-shadow: inset 0 3px 6px rgba(0,0,0,.05);
  padding: 15px;

  &.filters{
    padding: 45px 15px 15px;

    &:after{
      position: absolute;
      top: 15px;
      left: 15px;
      font-size: 12px;
      font-weight: 700;
      color: #959595;
      text-transform: uppercase;
      letter-spacing: 1px;
      content: "Filters";
    }
  }

  .table-container{
    width: 100%;
    overflow-x: auto;
  }

  table{
    overflow-x: auto;
  }
}

.page-section.page-section-card, .section-card{
  background-color: #fff;
  border: 1px solid #ccc;
  border-radius: 8px;
  padding: 20px;
  margin-bottom: 20px;
  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
}

.page-header {
  @media (min-width: $screen-md) {
    margin-top: 1.5rem;
  }
}

.lead {
  margin-bottom: 20px;
  font-size: 16px;
  font-weight: 300;
  line-height: 1.4;
}

.page-wrapper {
  margin-bottom: 60px;

  .highlight-section {
    margin: 0;
    margin-top: -16px;
    margin-right: 0;
    margin-left: 0;
    border-width: 1px;
    border-bottom-right-radius: 4px;
    border-bottom-left-radius: 4px;
    padding: 9px 14px;
    margin-bottom: 14px;
    background-color: #f7f7f9;
    border: 1px solid #e1e1e8;
    border-radius: 4px;
  }

  .pagination li a, .pagination li span {
    padding: 10px 16px;
    font-size: 18px;
    line-height: 1.3333333;
  }
}

.filters {
  select {
    min-width: 200px;
  }
}

#editor-wrap {
  #ayah_text {
    word-spacing: 2rem;
    line-height: 2;
    display: block;
    width: 100%;
  }

  #words {
    overflow-y: scroll;
    max-height: 200px;

    .well {
      margin: 10px;
    }

    .form-control {
      font-size: 30px;
      min-height: 62px;
      resize: none;
    }
  }

  .btn, .help-block {
    font-family: Roboto;
  }
}

@media (min-width: 768px) {
  .page-section {
    margin-right: 0;
    margin-left: 0;
    background-color: #fff;
    border-color: #ddd;
    border-width: 1px;
    border-radius: 4px 4px 0 0;
    -webkit-box-shadow: none;
    box-shadow: none;
  }
}

.sort-icons{
  position: relative;

  .fa-sort-up{
    position: absolute;
  }

  .fa{
    font-size: 20px;
     &:not(.active){
       color: #cacaca;
     }
  }
}

.sort-link{
  cursor: pointer;
  text-decoration: none;
  transition: color 0.2s ease;

  &:hover {
    color: #46ac7a !important;

    .label-text,
    .sort-icons,
    * {
      color: #46ac7a !important;
    }
  }
}

